[gd_scene format=3 uid="uid://ck4le5qj5ua62"]

[ext_resource type="Script" uid="uid://c33w352oy8gnb" path="res://enemy.gd" id="1_30cdx"]
[ext_resource type="Texture2D" uid="uid://bigtbb054pe5w" path="res://enemy_sprites.png" id="1_opr0s"]
[ext_resource type="PackedScene" uid="uid://c6jatjqfvu7j0" path="res://projectile.tscn" id="2_aoykg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_30cdx"]
radius = 5.0

[node name="guard" type="CharacterBody2D" unique_id=1139509445 groups=["enemy"]]
z_index = 1
collision_layer = 5
script = ExtResource("1_30cdx")
PROJECTILE = ExtResource("2_aoykg")

[node name="col" type="CollisionShape2D" parent="." unique_id=1711648449]
shape = SubResource("CircleShape2D_30cdx")

[node name="sprite" type="Sprite2D" parent="." unique_id=1702888534]
texture = ExtResource("1_opr0s")
hframes = 8
vframes = 8

[node name="nav_agent" type="NavigationAgent2D" parent="." unique_id=982341719]
path_desired_distance = 3.0
target_desired_distance = 3.0
path_postprocessing = 1

[node name="nav_timer" type="Timer" parent="." unique_id=1996378647]
wait_time = 0.5
autostart = true

[node name="shoot_timer" type="Timer" parent="." unique_id=842786965]
wait_time = 1.5
autostart = true

[node name="shoot_delay" type="Timer" parent="." unique_id=1792986216]
wait_time = 0.35
one_shot = true

[node name="shoot_line" type="Line2D" parent="." unique_id=1545043778]
points = PackedVector2Array(0, 0, 512, 0)
width = 0.0
default_color = Color(0.20127451, 0.6400178, 5.7756904e-07, 0.40392157)

[connection signal="timeout" from="nav_timer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_delay" to="." method="_on_shoot_delay_timeout"]
